fixed up formatting, padding and horizontal scroll issues

--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -2236,7 +2236,7 @@ input, select, textarea {
 			font-size: 2.75em;
 			letter-spacing: 0.075em;
 			line-height: 1.35em;
-			padding: 1em 0 1em 0;
+			padding: 1em 1em 1em 1em;
 			margin-bottom: 1em;
 		}
 
