--- a/site/assets/css/pagestyle.css
+++ b/site/assets/css/pagestyle.css
@@ -1,3 +1,8 @@
+html
+{
+	overflow-y: scroll;
+}
+
 noselect
 {
 	-webkit-user-select: none; /* Chrome/Safari */
